# r3localetest

./: .gitignore  .gitmodules  CONTRIBUTING.MD  Cargo.toml  LICENSE  README-DEV.MD  README.MD  build.rs  cbindgen_c.toml  cbindgen_cpp.toml  codecov.yml  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: DeployMkDocs.yml  auto-changelog.yml  deploy-mkdocs.yml  rust.yml
benches/my_benchmark/: main.rs
docs/: contributing.md  index.md  requirements.txt
docs/functions/: free_locale_table.md  get_entry.md  get_locale_table.md  merge_locale_table_c.md  parse_r3locale_bytes.md
scripts/: build-macos-x64.ps1  test-linux-x64.ps1  test-linux-x86.ps1  test-wine-x64.ps1  test-wine-x86.ps1
src/: bigexample.r3l  example.r3l  exports.rs  lib.rs
src/locale_api/: extern.rs  mod.rs  parser.rs  sanitizer.rs  types.rs
src/locale_system/: mod.rs  parser.rs  sanitizer.rs  simd.rs  types.rs
